# plumbline

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  ONBOARDING.md  README.md  SECURITY.md  START-HERE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dco.yml  publish.yml
benchmark/: README.md  precision.md  real-repos.md
benchmark/corpus/: agent_idiomatic.py  agent_interactive.py  agt001_uncapped.py  agt008_autogen.py  cost001_uncapped.py  idiomatic.py  mcp001_auth.py  mcp003_scopes.py  mdl_reasoning.py  out001_unguarded.py  prm003_system.py  res001_disabled.py  res002_no_retries.py  res005_swallowed.py  res010_stream.py  sec002_eval.py  sec003_shell.py  sec005_sql.py  sec006_xss.py  sec_safe.py  tool001_crewai.py  tool001_langchain.py  zz_harness.py
docs/: backlog.md  content-plan.md  rule-authoring.md  standards-map.md  trusted-publishing.md
docs/adr/: 0001-foundational-decisions.md  0002-finding-model-and-fingerprint.md  0003-taint-engine-representation.md  0004-adapter-contract-and-semantic-tags.md  0005-rule-discovery-mechanics.md  0006-sarif-mapping-and-baseline.md  0007-config-schema.md  0008-scoring-formula.md  0009-ast-layer-stdlib-ast.md  0010-analysis-scopes.md  0011-skill-pack-export.md  0012-derived-semantics-and-agent-loops.md  0013-non-python-evidence-scanning.md  0014-finding-code-flow.md  0015-ai-remediation-boundary.md  0017-packaged-static-data-tables.md  0018-reasoning-model-configuration-rules.md  TEMPLATE.md
docs/design/: detailed-design.md  implementation-plan.md
docs/examples/: README.md  llm-sample-report.html
docs/launch/: carousel-mockup.html  demo-script.md  demo.tape  distribution-strategy.md  launch-blog-post.md  launch-checklist.md  launch-plan.md  release-notes-v0.0.1.md  release-notes-v0.0.2.md  social-launch-copy.md
docs/specs/: adapter-contract.md  architecture.md  harness-rules.md  rule-catalog.md  rule-plugin-contract.md  taint-engine.md
fixtures/: README.md
fixtures/PLB-AGT-008/: bad_no_bound.py  good_max_turns.py  good_not_autogen.py  good_termination.py
fixtures/PLB-COST-001/: bad_no_max_tokens.py  good_max_completion_tokens.py  good_max_tokens_set.py  good_unknown_kwargs.py
fixtures/PLB-GOV-001/: bad_pii_prompt.py  good_redacted.py
fixtures/PLB-GOV-002/: bad_log_response.py  good_log_metadata.py
fixtures/PLB-MCP-001/: bad_remote_no_auth.py  good_loopback_bound.py  good_remote_with_auth.py  good_stdio_local.py
fixtures/PLB-MCP-003/: bad_omnibus_scope.py  bad_wildcard_scope.py  good_minimal_scopes.py
src/plumbline/: __init__.py  cli.py  (+5 more)
tests/: README.md  test_benchmark.py  test_cli.py  test_config.py  test_cross_module.py  test_engine.py  test_enrichment.py  test_model.py  test_performance.py  test_robustness.py  test_scoring.py  test_suppressions.py
(+164 files in other folders)
