[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actaclad-plumbline"
version = "0.0.2"
description = "The reliability and architecture analyzer for LLM and agentic systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ActaClad Technologies" }]
keywords = [
    "llm", "agent", "agentic", "static-analysis", "reliability",
    "ai-engineering", "observability", "code-analysis", "sarif",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]
# Detection path dependencies ONLY. No network/LLM libs here — the optional
# AI remediation layer is an extra (see [project.optional-dependencies]).
# Parsing uses the stdlib `ast` (ADR-0009); config uses stdlib `tomllib`
# (ADR-0007, requires-python >= 3.11). Neither needs a runtime dependency.
dependencies = [
    "click>=8.1",       # CLI
    "rich>=13.0",       # human-readable CLI output
]

[project.optional-dependencies]
ai = [
    # Optional remediation-enrichment layer. NEVER imported by the detection path.
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "jsonschema>=4.0",  # validate SARIF output against the 2.1.0 schema in tests
]

[project.scripts]
plumb = "plumbline.cli:main"

[project.urls]
Homepage = "https://actaclad.com"
Repository = "https://github.com/actaclad/plumbline"
Documentation = "https://github.com/actaclad/plumbline/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/plumbline"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Fixtures and the benchmark corpus are realistic (sometimes deliberately
# imperfect) sample programs — not project source. They must parse, but their
# style is not linted/reformatted. Crucially, the corpus carries inline
# `# plumb-expect:` markers whose LINE POSITION is load-bearing, so reformatting
# (which would wrap calls and move the markers) must not touch them.
extend-exclude = ["fixtures", "benchmark/corpus"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

# `anthropic` is the optional [ai] extra, not installed in CI and lazy-imported
# inside the enrichment layer only (ADR-0015 D3). It is never on the detection path.
[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
